terraform/ec2.tf
data "aws_ami" "ubuntu" {
  most_recent = true

  owners = ["099720109477"]

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd-gp3/ubuntu-noble-24.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
}

resource "aws_instance" "fittrek" {
  ami           = data.aws_ami.ubuntu.id
  instance_type = var.instance_type

  key_name = "diya1"

  iam_instance_profile = aws_iam_instance_profile.fittrek.name

  subnet_id                   = aws_subnet.public.id
  vpc_security_group_ids      = [aws_security_group.fittrek.id]
  associate_public_ip_address = true

  user_data = <<-EOF
              #!/bin/bash
              apt-get update -y
              apt-get install -y nodejs npm git
              EOF

  tags = {
    Name = "${var.project_name}-server"
  }
}
